<resources>
    <string name="app_name">Score Card Master V2.0</string>
    <string name="TEAM_A">TEAM A</string>
    <string name="score_a">0</string>
    <string name="TEAM_B">TEAM B</string>
    <string name="score_b">0</string>
    <string name="add_1">1 x</string>
    <string name="add_2">2 x</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="player_6">Player 6</string>
    <string name="timerst">PRESS START TIMER</string>
    <string name="reset_b">reset</string>
    <string name="start_b">start</string>
    </resources>
