<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.android.scorecardmasterv20.MainActivity">

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@android:color/black"
    android:columnCount="2"
    >
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_columnWeight="1"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    android:gravity="center_horizontal"
    android:text="@string/TEAM_A"
    android:textColor="@android:color/white"
    android:textSize="18sp"/>
    <TextView
        android:id="@+id/team_a_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/score_a"
        android:textColor="@android:color/white"
        android:textSize="36sp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addOneForTeamA"
        android:text="@string/add_1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addTwoForTeamA"
        android:text="@string/add_2"
        />

</LinearLayout>


</LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/TEAM_B"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/score_b"
            android:textColor="@android:color/white"
            android:textSize="36sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addOneForTeamB"
                android:text="@string/add_1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addTwoForTeamB"
                android:text="@string/add_2"/>

        </LinearLayout>


    </LinearLayout>

</GridLayout>

<GridLayout
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="8"
    android:alignmentMode="alignBounds"
    android:background="@android:color/black"
    android:columnCount="3"
    android:rowCount="6"
     >

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        android:layoutDirection="rtl"
        />
    <TextView android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/player_1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
                />
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        />
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        android:layoutDirection="rtl"
        />
    <TextView android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/player_2"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        />
    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        android:layoutDirection="rtl"
        />
    <TextView android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/player_3"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        />
    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        android:layoutDirection="rtl"
        />
    <TextView android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/player_4"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        />
    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        android:layoutDirection="rtl"
        />
    <TextView android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/player_5"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        />
    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        android:layoutDirection="rtl"
        />
    <TextView android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/player_6"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:buttonTint="@android:color/white"
        />




</GridLayout>

<TextView
    android:id="@+id/timerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@android:color/black"
    android:gravity="center"
    android:text="@string/timerst"
    android:textColor="@android:color/white"
    android:textSize="32sp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:weightSum="2">

    <Button
        android:id="@+id/resetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="resetScore"
        android:text="@string/reset_b"/>

    <Button
        android:id="@+id/startTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="startTimer"
        android:text="@string/start_b"
        />
    <TextView
        android:id="@+id/txtCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

</LinearLayout>
</LinearLayout>
